fix text-align and color

--- a/high.css
+++ b/high.css
@@ -575,6 +575,60 @@ video {
   justify-content: center;
   align-items: center;
 }
+.red {
+  color: red;
+}
+.bg-red {
+  backround-color: red;
+}
+.border-red {
+  border-color: red;
+}
+.yellow {
+  color: yellow;
+}
+.bg-yellow {
+  backround-color: yellow;
+}
+.border-yellow {
+  border-color: yellow;
+}
+.green {
+  color: green;
+}
+.bg-green {
+  backround-color: green;
+}
+.border-green {
+  border-color: green;
+}
+.cyan {
+  color: cyan;
+}
+.bg-cyan {
+  backround-color: cyan;
+}
+.border-cyan {
+  border-color: cyan;
+}
+.blue {
+  color: blue;
+}
+.bg-blue {
+  backround-color: blue;
+}
+.border-blue {
+  border-color: blue;
+}
+.purple {
+  color: purple;
+}
+.bg-purple {
+  backround-color: purple;
+}
+.border-purple {
+  border-color: purple;
+}
 /*
  * display
  */
@@ -598,6 +652,18 @@ video {
 }
 .relative {
   position: relative;
+}
+/*
+ * text-align
+ */
+.text-center {
+  text-align: center;
+}
+.text-left {
+  text-align: left;
+}
+.text-right {
+  text-align: right;
 }
 /*
  * border
