--- a/src/index.less
+++ b/src/index.less
@@ -4,6 +4,7 @@
 @import 'util.less';
 @import 'grid.less';
 @import 'flex.less';
+@import 'color.less';
 
 
 
@@ -34,6 +35,13 @@
 .relative {
   position: relative;
 }
+
+/*
+ * text-align
+ */
+.text-center { text-align: center; }
+.text-left { text-align: left; }
+.text-right { text-align: right; }
 
 /*
  * border
